--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ ul { list-style: none; padding-left: 5px; }
 a { color:blue; text-decoration: none;}
 .bar {
     background-color: #f9f9fb;
-    padding:15px;
+    padding:10px;
     border-top: solid 1px #cdcdcd;
     border-bottom: solid 1px #cdcdcd;
 }
@@ -35,4 +35,8 @@ a { color:blue; text-decoration: none;}
 }
 figure {
     text-align: center;
+}
+
+p{
+    text-align: justify;
 }
